fix(macos): add sidebar top padding to avoid traffic light overlap

--- a/src/renderer/src-main-window/assets/css/styles.css
+++ b/src/renderer/src-main-window/assets/css/styles.css
@@ -7,16 +7,19 @@
 
 :root[data-platform='darwin'] {
   --la-mac-titlebar-safe-left: 76px;
+  --la-mac-sidebar-safe-top: 10px;
 }
 
 :root {
+  --la-mac-sidebar-safe-top: 0px;
   --la-mac-titlebar-safe-left: 0px;
   --la-app-min-height: 520px;
   --la-app-min-width: 670px;
   --la-titlebar-height: 36px;
   --la-scrollbar-height: 6px;
   --la-scrollbar-width: 8px;
-  --n-option-padding: 0 4px;}
+  --n-option-padding: 0 4px;
+}
 
 
 [data-theme='dark'] {
@@ -108,7 +111,7 @@ body {
 }
 
 /* adjust for app title bar height */
-.n-notification-container > .n-scrollbar > .n-scrollbar-container {
+.n-notification-container>.n-scrollbar>.n-scrollbar-container {
   max-height: calc(100vh - var(--la-titlebar-height)) !important;
 }
 
